--- a/package.xml
+++ b/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.5</version>
   <description>Node to monitor potential collision or cliffs</description>
   <maintainer email="shinsel.robots@gmail.com">Dave Shinsel</maintainer>
-  <license>BSD</license>
+  <license>Apache-2</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
@@ -17,6 +17,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>tf</build_depend>
 
   <run_depend>pcl_conversions</run_depend>
   <run_depend>pcl_ros</run_depend>
@@ -27,5 +28,7 @@
   <run_depend>std_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>message_generation</run_depend>
+  <run_depend>tf</run_depend>
+  <run_depend>pointcloud_to_laserscan</run_depend>
 
 </package>
