--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,8 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>nav_msgs</build_depend>
+  <build_depend>laser_geometry</build_depend>
 
   <run_depend>pcl_conversions</run_depend>
   <run_depend>pcl_ros</run_depend>
@@ -29,6 +31,8 @@
   <run_depend>sensor_msgs</run_depend>
   <run_depend>message_generation</run_depend>
   <run_depend>tf</run_depend>
+  <run_depend>nav_msgs</run_depend>
+  <run_depend>laser_geometry</run_depend>
   <run_depend>pointcloud_to_laserscan</run_depend>
 
 </package>
