--- a/package.xml
+++ b/package.xml
@@ -20,6 +20,7 @@
   <build_depend>tf</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>laser_geometry</build_depend>
+  <build_depend>visualization_msgs</build_depend>
 
   <run_depend>pcl_conversions</run_depend>
   <run_depend>pcl_ros</run_depend>
@@ -34,5 +35,6 @@
   <run_depend>nav_msgs</run_depend>
   <run_depend>laser_geometry</run_depend>
   <run_depend>pointcloud_to_laserscan</run_depend>
+  <run_depend>visualization_msgs</run_depend>
 
 </package>
